Develop (#85)
* Init data

* Update provider controller

* Update Provider Detail API

* Update provider query

* Update provider filter

* not wait deployment success

* Add validation

* Update authority

* Update get provided product detail

* Update provided product uri

* Update upload array file and Update product base price (#78)

* Feature/checkout (#79)

* fix swagger server

* feature/shop (#36)

* fix swagger server (#35)

* Update entity

* Update ProductEntity.java

* Fix/tag query (#34)

* Fix cart item id and update categpry thumnail

* Update tag query

* Update multiple query tag

---------

Co-authored-by: Le Quang Ky <74134498+tackedev@users.noreply.github.com>

* Feature/create shop (#37)

* fix swagger server (#35)

* Update entity

* Update ProductEntity.java

* Update mapper and domain

* Fix/tag query (#34)

* Fix cart item id and update categpry thumnail

* Update tag query

* Update multiple query tag

* Update shop response

---------

Co-authored-by: Le Quang Ky <74134498+tackedev@users.noreply.github.com>

* Hotfix same site cookies issue (#38)

* fix swagger server (#35)

* Fix/tag query (#34)

* Fix cart item id and update categpry thumnail

* Update tag query

* Update multiple query tag

* add samesite=strict cookie attribute

---------

Co-authored-by: Nguyễn Thanh Hà <80661424+NTH260202@users.noreply.github.com>

* Update API Product Suggestion and searching filter

* Remove redundant

* Fix conflict

* Fix conflict

* Fix error status

* resolve conflict

* fix null user

* update response status address api

* add order entities

* update update entity

* Update audit (#58)

* Update audit

* Fix builder

* Fix constructor

* Feature/order page (#59)

* Add image for shop in cart (#48)

* fix swagger server

* feature/shop (#36)

* fix swagger server (#35)

* Update entity

* Update ProductEntity.java
